<resources>
    <string name="app_name">KINDEE</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Register">Register</string>
    <string name="Fname">First name</string>
    <string name="Lname">Last name</string>
    <string name="RePassword">Re Password</string>
    <string name="ok">OK</string>

    <string name="WhatToEat">กินอะไรดี</string>
    <string name="FavoriteRes">ร้านโปรดของฉัน</string>
    <string name="addRes">เพิ่มร้าน</string>
    <string name="UploadImage">UploadImg</string>
    <string name="title_activity_maps_upload">Map</string>
    <string name="Input_Resturantname">ชื่อร้าน</string>
    <string name="selectImg">Select Image</string>
    <string name="Type">ประเภท</string>
    <string name="search">ค้นหาร้านอาหารที่ชอบ</string>
    <string name="title_activity_map_detail">Map</string>

    <string name="Random">เลือกระยะ</string>

    <string-array name="number_of_km">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>

