<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="50dp">
    <RelativeLayout
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/image_loco"
        android:src="@mipmap/ic_launcher_foreground"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name"
        android:layout_width="200dp"
        android:layout_height="200dp" />
    <TextView
        android:id="@+id/tv_Login"
        android:textSize="20dp"
        android:text="@string/Login"
        android:layout_below="@id/image_loco"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/layout_contrainer_username"
        android:layout_below="@id/tv_Login"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Username"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edt_Username_login"
            android:ems="10"
            android:inputType="textPersonName"
            android:layout_marginLeft="30dp"
            android:layout_width="140dp"
            android:layout_height="40dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_contrainer_password"
        android:layout_below="@id/layout_contrainer_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Password"
            android:textSize="20dp"
            android:layout_marginLeft="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edt_Password_login"
            android:ems="10"
            android:inputType="textPassword"
            android:layout_marginLeft="30dp"
            android:layout_width="140dp"
            android:layout_height="40dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_contrainer_btnlogin_btnregister"
        android:layout_below="@id/layout_contrainer_password"
        android:orientation="horizontal"
        android:layout_marginTop="70dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/Register"
            android:textColor="@color/colorPrimary"
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="callRegister"
            />
        <Button
            android:onClick="login"
            android:text="@string/Login"
            android:textSize="13.5dp"
            android:layout_marginLeft="130dp"
            android:layout_width="80dp"
            android:layout_height="37dp" />
    </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
